# nvidia-nemotron-content-safety

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 00-PROJECT-BRIEF.md  01-scoping-and-cobuild.md  02-system-design.md  03-architecture-diagrams.md  04-design-principles.md
examples/: 01_basic_moderation.py  02_think_mode.py  03_custom_policy.py  04_pharma_internal_app.py
src/nemoguard/: __init__.py  cli.py  client.py  config.py  parser.py  verify.py
tests/: test_client.py  test_parser.py
