[project]
name = "nemoguard"
version = "0.1.0"
description = "Verification harness for nvidia/nemotron-3.5-content-safety via OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40",
  "python-dotenv>=1.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
nemoguard = "nemoguard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemoguard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
